--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,7 +1,11 @@
-# change tmux prefix to ctrl+space
-unbind-key C-b
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
+#############################
+# Bindings
+#############################
+
+# remap prefix
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
 
 # split panes using | and -
 bind | split-window -h -c "#{pane_current_path}"
@@ -14,71 +18,98 @@ bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
 bind -r k select-pane -U  # move up
 bind -r l select-pane -R  # move right
+
+# pane resizing
+# resize a pane 2 rows at a time.
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
+
+# pane swapping
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
-set -g mouse on
+# enter copy mode
+bind Enter copy-mode 
 
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
+# Use r to quickly reload tmux settings
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf \; display 'Reloaded tmux config'
 
-set -ga terminal-overrides ',*:Tc'
-set -g pane-border-status bottom
+#############################
+# Colors
+#############################
 
-set -g @prefix_highlight_fg 'black' # default is 'colour231'
-set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
+color_bg="#2e3440"
+color_fg="#d8dee9"
+color_dim="#a5abb6"
+
+#############################
+# Status Settings
+#############################
+
+set -g base-index 1
+
+set -g status on
+set -g status-bg $color_bg
+set -g status-position top
+set -g status-left ""
 set -g status-right '#{prefix_highlight}'
+set-window -g window-status-style bg=brightblack,fg=$color_dim
+set-window -g window-status-format " #I #W "
+set-window -g window-status-current-style bg=green,fg=black
+set-window -g window-status-current-format " #I #W "
 
-# display options
-set-option -g status-position top
-set-option -g status-interval 5
-set-option -g status-bg '#282c34'
-set-option -g status-fg white
-set-option -g status-left-length 40
-set-option -g status-left "#[fg=brightwhite,bg=brightblack] #S #[fg=default,bg=default]"
-set-option -g window-status-format "#[fg=white,bg=brightblack] #I #[fg=white,bg=black] #W "
-set-option -g window-status-current-format "#[fg=black,bg=green] #I #[fg=black,bg=blue] #W "
-set-option -g status-justify left
-set-option -g status-right-length 150
+#############################
+# Pane Settings
+#############################
 
-# copy customization
-bind Enter copy-mode # enter copy mode
-run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
+set -g pane-base-index 1
+set -g pane-border-status bottom
+set -g pane-border-style fg=$color_dim
+set -g pane-active-border-style fg=green
+set -g display-panes-colour black
+set -g display-panes-active-colour brightblack
 
-# copy to macOS clipboard
-if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | pbcopy"'
-if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
-# copy to X11 clipboard
-if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
-if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
+#############################
+# Message Settings
+#############################
+set -g display-time 1000
+set -g message-style bg=yellow,fg=black
+set -g message-command-style bg=cyan,fg=black
 
-# List of plugins
+#############################
+# Other
+#############################
+
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+setw -g history-limit 50000000
+set -g mouse on
+set-window-option -g automatic-rename on
+set -g set-titles on
+set -g renumber-windows on
+
+#############################
+# Plugins
+#############################
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'tmux-plugins/tmux-yank'
-#set -g @plugin 'tmux-plugins/tmux-open'
-#set -g @plugin 'tmux-plugins/tmux-continuum'
-#set -g @continuum-restore 'on' # continuously save session
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @yank_selection_mouse 'clipboard'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin "arcticicestudio/nord-tmux"
+set -g @prefix_highlight_prefix_prompt 'Wait'
+set -g @prefix_highlight_copy_prompt 'Copy'
+set -g @prefix_highlight_sync_prompt 'Sync'
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_show_sync_mode 'on'
+set -g @prefix_highlight_fg black
+set -g @prefix_highlight_bg brightcyan
+set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
+set -g @prefix_highlight_sync_mode_attr 'fg=black,bg=green'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
-
-# -----------------------------------------------------------------------
-# user defined overrides
-if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
-
-#set -g default-terminal "alacritty"
