--- a/src/.config/alacritty/alacritty.yml
+++ b/src/.config/alacritty/alacritty.yml
@@ -112,7 +112,8 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FiraCode Nerd Font
+    # family: FiraCode Nerd Font
+    family: mono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
