--- a/.gitmodules
+++ b/.gitmodules
@@ -22,5 +22,5 @@
 	path = src/.config/oh-my-zsh
 	url = git@github.com:ohmyzsh/ohmyzsh.git
 [submodule "config/tmux/plugins/tpm"]
-	path = config/tmux/plugins/tpm
+	path = src/.config/tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
