--- a/src/.config/alacritty/alacritty.yml
+++ b/src/.config/alacritty/alacritty.yml
@@ -112,8 +112,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    # family: FiraCode Nerd Font
-    family: mono
+    family: Fira Code
 
     # The `style` can be specified to pick a specific face.
     style: Regular
