--- a/src/.config/tmux/tmux.conf
+++ b/src/.config/tmux/tmux.conf
@@ -3,9 +3,9 @@
 #############################
 
 # remap prefix
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+#unbind C-b
+#set -g prefix C-a
+#bind C-a send-prefix
 
 # split panes using | and -
 bind | split-window -h -c "#{pane_current_path}"
