--- a/src/.config/i3/config
+++ b/src/.config/i3/config
@@ -55,9 +55,9 @@ bindsym $mod+Ctrl+m exec pavucontrol
 # bindsym XF86MonBrightnessDown exec "xbacklight -dec 10; notify-send 'brightness down'"
 
 # Start Applications
-bindsym $mod+Ctrl+b exec terminal -e 'bmenu'
 bindsym $mod+Shift+Return exec brave
-bindsym $mod+F3 exec pcmanfm
+bindsym $mod+Ctrl+Return exec alacritty -e ranger
+bindsym $mod+Ctrl+b exec alacritty -e bmenu
 # bindsym $mod+F3 exec ranger
 bindsym $mod+Shift+F3 exec pcmanfm_pkexec
 bindsym $mod+F5 exec terminal -e 'mocp'
