--- a/src/.config/i3status/config
+++ b/src/.config/i3status/config
@@ -5,70 +5,77 @@
 # The following line should contain a sharp s:
 # ß
 # If the above line is not correctly displayed, fix your editor first!
-
+#
 general {
-        colors = true
-        interval = 5
-        color_good = "#2AA198"
-        color_bad = "#586E75"
-        color_degraded = "#DC322F"
+	colors = true
+	interval = 1
+	color_good = "#A3BE8C"
+	color_bad = "#D08770"
+	color_degraded = "#BF616A"
+	output_format = "i3bar"
 }
 
 # order += "ipv6"
-order += "cpu_usage"
-order += "disk /"
 # order += "disk /home"
-order += "wireless _first_"
-order += "ethernet _first_"
-order += "battery all"
+#order += "ethernet _first_"
 # order += "load"
+#
+order += "disk /"
+order += "cpu_usage"
 order += "memory"
-order += "tztime local"
+order += "cpu_temperature 0"
+order += "wireless _first_"
+order += "battery all"
+order += "time"
 
 cpu_usage {
-        format = " cpu  %usage "
+	format = " %usage"
 }
 
-load {
-	format = "  %1min "
-	# max_threshold = 0.3
+#load {
+	#format = "  %1min "
+	## max_threshold = 0.3
+#}
+
+
+#ethernet _first_ {
+## if you use %speed, i3status requires root privileges
+        #format_up = " lan: %ip %speed "
+        #format_down = " no lan "
+#}
+wireless _first_ {
+	format_up = "直 (%quality, %bitrate / %frequency) %ip"
+	format_down = "睊"
 }
 
 disk "/" {
-	format = " ⛁ %avail "
-}
-
-ethernet _first_ {
-# if you use %speed, i3status requires root privileges
-        format_up = " lan: %ip %speed "
-        format_down = " no lan "
-}
-
-battery all {
-        format = "%status %percentage %remaining %emptytime"
-        #format = " %status %percentage"
-        format_down = "No battery"
-        last_full_capacity = true
-        integer_battery_capacity = true
-        status_chr = ""
-        # status_chr = "⚡"
-        # status_bat = "bat"
-        # status_bat = "☉"
-        status_bat = ""
-        # status_unk = "?"
-        status_unk = ""
-        # status_full = ""
-        status_full = "☻"
-        low_threshold = 15
-        threshold_type = time
+	format = "⛁ %avail"
 }
 
 memory {
-        format = "%used | %available"
-        threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
+	memory_used_method = classical
+	format = " %percentage_used"
+	threshold_degraded = "10%"
+	threshold_critical = "5%"
 }
 
-tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+cpu_temperature 0 {
+	format = " %degrees°C"
+}
+
+battery all {
+		format = "%status %percentage %remaining %consumption"
+		integer_battery_capacity = true
+		format_down = "No battery"
+		last_full_capacity = true
+		status_chr = ""
+		status_bat = ""
+		status_unk = ""
+		status_full = ""
+		low_threshold = 30
+		threshold_type = time
+}
+
+time {
+	format = "%Y-%m-%d %H:%M:%S "
 }
