--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,2 @@
-*
-
-!config/alacritty
-!config/bat
-!config/dunst
-!config/flameshot
-!config/git
-!config/gtk-3.0
-!config/lazydocker
-!config/lazygit
-!config/neofetch
-!config/nvim
-!config/oh-my-zsh
-!config/pgcli
-!config/regolith2
-!config/starship
-!config/taskwarrior
-!config/tmux
-config/tmux/plugins
-!config/tmux/plugins/tpm
-!config/zsh
-config/zsh/.zcompdump*
-!config/okularpartrc
-
-src/.config/tmux/plugins
-src/.config/zsh/.zcompdump*
+src/config/tmux/plugins
+src/config/zsh/.zcompdump*
