--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,7 +18,7 @@
 - link:
     ~/.config/:
       glob: true
-      path: src/.config/*
+      path: src/config/*
     # git
     #~/.gitconfig:
       #if: which git
