--- a/.gitmodules
+++ b/.gitmodules
@@ -2,25 +2,21 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
-[submodule "oh-my-zsh"]
-	path = config/oh-my-zsh
-	url = https://github.com/ohmyzsh/ohmyzsh
-	ignore = dirty
 [submodule "zsh-syntax-highlighting"]
-	path = src/.config/zsh/custom/plugins/zsh-syntax-highlighting
+	path = src/config/zsh/custom/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
 	ignore = dirty
 [submodule "zsh-autosuggestions"]
-	path = src/.config/zsh/custom/plugins/zsh-autosuggestions
+	path = src/config/zsh/custom/plugins/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
 	ignore = dirty
 [submodule "zsh-completions"]
-	path = src/.config/zsh/custom/plugins/zsh-completions
+	path = src/config/zsh/custom/plugins/zsh-completions
 	url = https://github.com/zsh-users/zsh-completions
 	ignore = dirty
-[submodule "config/oh-my-zsh"]
-	path = src/.config/oh-my-zsh
+[submodule "oh-my-zsh"]
+	path = src/config/oh-my-zsh/oh-my-zsh
 	url = git@github.com:ohmyzsh/ohmyzsh.git
-[submodule "config/tmux/plugins/tpm"]
-	path = src/.config/tmux/plugins/tpm
+[submodule "tpm"]
+	path = src/config/tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
