--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = https://github.com/zsh-users/zsh-completions
 	ignore = dirty
 [submodule "oh-my-zsh"]
-	path = src/config/oh-my-zsh/oh-my-zsh
+	path = src/config/oh-my-zsh
 	url = git@github.com:ohmyzsh/ohmyzsh.git
 [submodule "tpm"]
 	path = src/config/tmux/plugins/tpm
