--- a/.gitmodules
+++ b/.gitmodules
@@ -2,10 +2,6 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
-[submodule "zsh-syntax-highlighting"]
-	path = src/config/zsh/custom/plugins/zsh-syntax-highlighting
-	url = https://github.com/zsh-users/zsh-syntax-highlighting
-	ignore = dirty
 [submodule "zsh-autosuggestions"]
 	path = src/config/zsh/custom/plugins/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
@@ -20,3 +16,12 @@
 [submodule "tpm"]
 	path = src/config/tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
+[submodule "src/config/zsh/custom/plugins/zsh-syntax-highlighting"]
+	path = src/config/zsh/custom/plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule "src/config/zsh/custom/plugins/zsh-autosuggestions"]
+	path = src/config/zsh/custom/plugins/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions
+[submodule "src/config/zsh/custom/plugins/zsh-completions"]
+	path = src/config/zsh/custom/plugins/zsh-completions
+	url = https://github.com/zsh-users/zsh-completions
