--- a/src/config/i3/config
+++ b/src/config/i3/config
@@ -295,7 +295,8 @@ bar {
 
 	i3bar_command i3bar --transparency
 	status_command i3status
-
+	#status_command i3blocks
+	#status_command 2>/tmp/i3blocks.err SCRIPT_DIR=$XDG_CONFIG_HOME/i3blocks/scripts i3blocks -vvv -c $XDG_CONFIG_HOME/i3blocks/config | tee /tmp/i3blocks.out
 	tray_output primary
 	bindsym button4 nop
 	bindsym button5 nop
