--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,53 +12,18 @@
       force: true
     ~/.config/:
       force: true
+      recursive: true
 - create:
   - ~/Code
   - ~/Applications
 - link:
+    ~/.dir_colors:
+      path: src/dir_colors
+    ~/.Xresources:
+      path: src/Xresources
     ~/.config/:
       glob: true
       path: src/config/*
-    # git
-    #~/.gitconfig:
-      #if: which git
-      #path: git/gitconfig
-    #~/.gitignore_global:
-      #if: which git
-      #path: git/gitignore_global
-    # regolith
-    #~/.config/regolith2:
-      #path: regolith
-    # tmux
-    #~/.tmux.conf:
-      #path: tmux/tmux.conf
-      #force: true
-    #~/.tmux/plugins:
-      #path: tmux/plugins
-    # neovim
-    #~/.config/nvim:
-      #if: which nvim
-      #path: nvim
-    # neofetch
-    #~/.config/neofetch:
-      #if: which neofetch
-      #path: neofetch
-    # zsh
-    #~/.config/zsh:
-      #if: which zsh
-      #path: zsh
-    # starship
-    #~/.config/starship.toml:
-      #if: which starship
-      #path: starship/starship.toml
-    # taskwarrior
-    #~/.config/taskwarrior:
-      #if: which task
-      #path: taskwarrior
-    # conky
-    #~/.config/conky:
-      #if: which conky
-      #path: conky
 - shell:
   - 
     if: which i3-msg
