--- a/src/config/flameshot/flameshot.ini
+++ b/src/config/flameshot/flameshot.ini
@@ -2,6 +2,6 @@
 autoCloseIdleDaemon=true
 checkForUpdates=true
 contrastOpacity=127
-disabledTrayIcon=true
+disabledTrayIcon=false
 savePath=/home/axelyung/Pictures/screenshots
-startupLaunch=false
+startupLaunch=true
