--- a/src/config/i3status/config
+++ b/src/config/i3status/config
@@ -22,34 +22,22 @@ general {
 #
 order += "disk /"
 order += "cpu_usage"
-order += "memory"
 order += "cpu_temperature 0"
+order += "memory"
 order += "wireless _first_"
 order += "battery all"
 order += "time"
+
+disk "/" {
+	format = "⛁ %avail"
+}
 
 cpu_usage {
 	format = " %usage"
 }
 
-#load {
-	#format = "  %1min "
-	## max_threshold = 0.3
-#}
-
-
-#ethernet _first_ {
-## if you use %speed, i3status requires root privileges
-        #format_up = " lan: %ip %speed "
-        #format_down = " no lan "
-#}
-wireless _first_ {
-	format_up = "直 (%quality, %bitrate / %frequency) %ip"
-	format_down = "睊"
-}
-
-disk "/" {
-	format = "⛁ %avail"
+cpu_temperature 0 {
+	format = " %degrees°C"
 }
 
 memory {
@@ -59,23 +47,24 @@ memory {
 	threshold_critical = "5%"
 }
 
-cpu_temperature 0 {
-	format = " %degrees°C"
+wireless _first_ {
+	format_up = "直 %quality %bitrate %ip"
+	format_down = "睊"
 }
 
 battery all {
-		format = "%status %percentage %remaining %consumption"
-		integer_battery_capacity = true
-		format_down = "No battery"
-		last_full_capacity = true
-		status_chr = ""
-		status_bat = ""
-		status_unk = ""
-		status_full = ""
-		low_threshold = 30
-		threshold_type = time
+	format = "%status %percentage %remaining %consumption"
+	integer_battery_capacity = true
+	format_down = "No battery"
+	last_full_capacity = true
+	status_chr = ""
+	status_bat = ""
+	status_unk = ""
+	status_full = ""
+	low_threshold = 30
+	threshold_type = time
 }
 
 time {
-	format = "%Y-%m-%d %H:%M:%S "
+	format = "%Y-%m-%d %H:%M:%S"
 }
