--- a/src/config/i3/config
+++ b/src/config/i3/config
@@ -214,15 +214,17 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # Set shut down, restart and locking features
-bindsym $mod+Escape mode "$mode_system"
 set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
+set $i3exit ~/.config/i3/exit.sh
+bindsym $mod+Escape mode "$mode_system"
 mode "$mode_system" {
-    bindsym l exec --no-startup-id i3exit lock, mode "default"
-    bindsym s exec --no-startup-id i3exit suspend, mode "default"
-    bindsym u exec --no-startup-id i3exit switch_user, mode "default"
-    bindsym e exec --no-startup-id i3exit logout, mode "default"
-    bindsym h exec --no-startup-id i3exit hibernate, mode "default"
-    bindsym r exec --no-startup-id i3exit reboot, mode "default"
+	# lock
+    bindsym l exec --no-startup-id $i3exit lock, mode "default"
+	bindsym e exec --no-startup-id $i3exit logout, mode "default"
+    bindsym s exec --no-startup-id $i3exit suspend, mode "default"
+    bindsym u exec --no-startup-id $i3exit switch_user, mode "default"
+    bindsym h exec --no-startup-id $i3exit hibernate, mode "default"
+    bindsym r exec --no-startup-id $i3exit reboot, mode "default"
     bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
 
     # exit system mode: "Enter" or "Escape"
@@ -284,8 +286,9 @@ exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec_always --no-startup-id "~/.config/i3/tray.sh"
 
 exec --no-startup-id xfce4-power-manager
+exec --no-startup-id greenclip daemon
 exec --no-startup-id fix_xcursor
-exec --no-startup-id xsetroot -solid "#4C566A"
+exec_always --no-startup-id xsetroot -solid "$nord3"
 #exec_always --no-startup-id xautolock -time 10 -locker blurlock
 exec --no-startup-id xidlehook --not-when-fullscreen --not-when-audio --timer normal 600 'blurlock' ''
 # Color palette used for the terminal ( ~/.Xresources file )
