--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -52,12 +52,8 @@
   -
     if: which dunst
     description: Refresh dunst and test
-    command: |
-      killall dunst
-      dunstify -t 3 -u low "low urgency notification"
-      dunstify -t 3 -u normal "normal urgency notification"
-      dunstify -t 3 -u critical "critical urgency notification"
+    command: $DOTFILES/scripts/test_dunst.sh
   -
     if: which zsh
     description: Test colors
-    command: zsh $DOTFILES/scripts/color_test.sh
+    command: $DOTFILES/scripts/color_test.sh
