--- a/.gitmodules
+++ b/.gitmodules
@@ -4,10 +4,7 @@
 	ignore = dirty
 [submodule "src/config/oh-my-zsh"]
 	path = src/config/oh-my-zsh
-	url = git@github.com:ohmyzsh/ohmyzsh.git
-[submodule "tpm"]
-	path = src/config/tmux/plugins/tpm
-	url = https://github.com/tmux-plugins/tpm.git
+	url = https://github.com/ohmyzsh/ohmyzsh.git
 [submodule "src/config/zsh/custom/plugins/zsh-syntax-highlighting"]
 	path = src/config/zsh/custom/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
