--- a/src/config/i3/config
+++ b/src/config/i3/config
@@ -56,7 +56,7 @@ bindsym $mod+s exec rofi -show keys
 bindsym $mod+c exec rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
 
 bindsym $mod+Return exec alacritty
-bindsym $mod+Shift+Return exec brave
+bindsym $mod+Shift+Return exec google-chrome-stable
 bindsym $mod+Ctrl+Return exec alacritty -e ranger
 
 #bindsym $mod+Shift+F3 exec pcmanfm_pkexec
@@ -170,8 +170,8 @@ bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
 # Open applications on specific workspaces
-assign [class="Alacritty"] $ws1
-assign [class="Brave-*"] $ws2
+#assign [class="Alacritty"] $ws1
+#assign [class="Google Chrome"] $ws2
 # assign [class="Pcmanfm"] $ws3
 # assign [class="Skype"] $ws5
 
@@ -272,12 +272,20 @@ set $nord14 #A3BE8C
 set $nord15 #B48EAD
 #####################
 
-# Autostart applications
-exec --no-startup-id picom -b
+# X initialization
+exec_always --no-startup-id "~/.config/i3/xinit.sh"
 
+# Autostart applications
 exec --no-startup-id alacritty
-exec --no-startup-id brave
-exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+for_window [class="Alacritty"] move to workspace $ws1
+
+exec --no-startup-id google-chrome-stable
+for_window [class="google-chrome"] move to workspace $ws2
+
+exec --no-startup-id i3-msg 'workspace 3; exec ranger.desktop'
+
+#exec --no-startup-id picom -b
+#exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 #exec --no-startup-id nitrogen --restore; sleep 1; picom -b
 #exec --no-startup-id pamac-tray
 # exec_always --no-startup-id sbxkb
@@ -290,7 +298,9 @@ exec_always --no-startup-id "~/.config/i3/tray.sh"
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id greenclip daemon
 exec --no-startup-id fix_xcursor
+
 exec_always --no-startup-id xsetroot -solid "$nord3"
+
 #exec_always --no-startup-id xautolock -time 10 -locker blurlock
 exec --no-startup-id xidlehook --not-when-fullscreen --not-when-audio --timer normal 600 'blurlock' ''
 # Color palette used for the terminal ( ~/.Xresources file )
