--- a/src/config/ranger/rc.conf
+++ b/src/config/ranger/rc.conf
@@ -34,12 +34,12 @@ set column_ratios 1,3,4
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
-set show_hidden false
+set show_hidden true
 
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
 # With "multiple", ranger will ask only if you delete multiple files at once.
-set confirm_on_delete multiple
+set confirm_on_delete always
 
 # Use non-default path for file preview script?
 # ranger ships with scope.sh, a script that calls external programs (see
@@ -57,7 +57,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware false
+set vcs_aware true
 
 # State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -71,7 +71,7 @@ set vcs_backend_svn disabled
 set vcs_msg_length 50
 
 # Use one of the supported image preview protocols
-set preview_images false
+set preview_images true
 
 # Set the preview image method. Supported methods:
 #
@@ -128,7 +128,7 @@ set iterm2_font_width 8
 set iterm2_font_height 11
 
 # Use a unicode "..." character to mark cut-off filenames?
-set unicode_ellipsis false
+set unicode_ellipsis true
 
 # BIDI support - try to properly display file names in RTL languages (Hebrew, Arabic).
 # Requires the python-bidi pip package
@@ -164,7 +164,7 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders none
+set draw_borders separators
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
