--- a/src/config/pgcli/config
+++ b/src/config/pgcli/config
@@ -47,7 +47,7 @@ generate_aliases = False
 log_file = default
 
 # keyword casing preference. Possible values: "lower", "upper", "auto"
-keyword_casing = auto
+keyword_casing = upper
 
 # casing_file location.
 # In Unix/Linux: ~/.config/pgcli/casing
@@ -57,7 +57,7 @@ casing_file = default
 
 # If generate_casing_file is set to True and there is no file in the above
 # location, one will be generated based on usage in SQL/PLPGSQL functions.
-generate_casing_file = False
+generate_casing_file = True
 
 # Casing of column headers based on the casing_file described above
 case_column_headers = True
@@ -110,7 +110,7 @@ syntax_style = default
 # When Vi mode is enabled you can use modal editing features offered by Vi in the REPL.
 # When Vi mode is disabled emacs keybindings such as Ctrl-A for home and Ctrl-E
 # for end are available in the REPL.
-vi = False
+vi = True
 
 # Error handling
 # When one of multiple SQL statements causes an error, choose to either
@@ -158,7 +158,24 @@ null_string = '<null>'
 enable_pager = True
 
 # Use keyring to automatically save and load password in a secure manner
-keyring = True
+keyring = False
+
+#define color_nord_0  #2E3440
+#define color_nord_1  #3B4252
+#define color_nord_2  #434C5E
+#define color_nord_3  #4C566A
+#define color_nord_4  #D8DEE9
+#define color_nord_5  #E5E9F0
+#define color_nord_6  #ECEFF4
+#define color_nord_7  #8FBCBB
+#define color_nord_8  #88C0D0
+#define color_nord_9  #81A1C1
+#define color_nord_10 #5E81AC
+#define color_nord_11 #BF616A
+#define color_nord_12 #D08770
+#define color_nord_13 #EBCB8B
+#define color_nord_14 #A3BE8C
+#define color_nord_15 #B48EAD
 
 # Custom colors for the completion menu, toolbar, etc.
 [colors]
@@ -172,28 +189,28 @@ scrollbar = 'bg:#00aaaa'
 selected = '#ffffff bg:#6666aa'
 search = '#ffffff bg:#4444aa'
 search.current = '#ffffff bg:#44aa44'
-bottom-toolbar = 'bg:#222222 #aaaaaa'
-bottom-toolbar.off = 'bg:#222222 #888888'
-bottom-toolbar.on = 'bg:#222222 #ffffff'
+bottom-toolbar = 'bg:#4c566a #aaaaaa'
+bottom-toolbar.off = 'bg:#4c566a #eceff4'
+bottom-toolbar.on = 'bg:#4c566a #a3be8c'
 search-toolbar = 'noinherit bold'
 search-toolbar.text = 'nobold'
 system-toolbar = 'noinherit bold'
 arg-toolbar = 'noinherit bold'
 arg-toolbar.text = 'nobold'
-bottom-toolbar.transaction.valid = 'bg:#222222 #00ff5f bold'
-bottom-toolbar.transaction.failed = 'bg:#222222 #ff005f bold'
+bottom-toolbar.transaction.valid = 'bg:#4c566a #a3be8c bold'
+bottom-toolbar.transaction.failed = 'bg:#4c566a #bf616a bold'
 # These three values can be used to further refine the syntax highlighting.
 # They are commented out by default, since they have priority over the theme set
 # with the `syntax_style` setting and overriding its behavior can be confusing.
-# literal.string = '#ba2121'
-# literal.number = '#666666'
-# keyword = 'bold #008000'
+literal.string = '#b48ead'
+literal.number = '#ebcb8b'
+keyword = 'bold #a3be8c'
 
 # style classes for colored table output
-output.header = "#00ff5f bold"
+output.header = "#88c0d0 bold"
 output.odd-row = ""
 output.even-row = ""
-output.null = "#808080"
+output.null = "#4c566a"
 
 # Named queries are queries you can execute by name.
 [named queries]
@@ -206,5 +223,5 @@ output.null = "#808080"
 # for decimal "d" - 12345678, ",d" - 12,345,678
 # for float "g" - 123456.78, ",g" - 123,456.78
 [data_formats]
-decimal = ""
-float = ""
+decimal = ",d"
+float = ",g"
