--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,24 +14,28 @@
       force: true
       recursive: true
 - create:
-  - ~/Code
-  - ~/Applications
-  - ~/Pictures/screenshots
+  - ~/repos
+  - ~/documents
+  - ~/downloads
+  - ~/pictures/screenshots
 - link:
     ~/.dir_colors:
       path: src/dir_colors
+    ~/.xinitrc:
+      path: src/xinitrc
     ~/.Xresources:
       path: src/Xresources
     ~/.config/:
       glob: true
       path: src/config/*
+    ~/.themes:
+      path: src/themes
 - shell:
   - 
     if: which i3-msg
     description: Refresh i3
     command: |
       i3-msg reload
-      #i3-msg restart
   -
     if: which zsh
     description: Refresh zsh
