--- a/src/dot_config/alacritty/alacritty.yml
+++ b/src/dot_config/alacritty/alacritty.yml
@@ -17,6 +17,7 @@ env:
   TERM: xterm-256color
 
 window:
+  option_as_alt: Both
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. Both lines and columns
@@ -588,9 +589,6 @@ live_config_reload: true
 # Directory the shell is started in. If this is unset, or `None`, the working
 # directory of the parent process will be used.
 #working_directory: None
-
-# Send ESC (\x1b) before characters when alt is pressed.
-#alt_send_esc: true
 
 # Offer IPC using `alacritty msg` (unix only)
 ipc_socket: true
