--- a/src/dot_config/ranger/rc.conf
+++ b/src/dot_config/ranger/rc.conf
@@ -28,7 +28,7 @@ set viewmode miller
 #set viewmode multipane
 
 # How many columns are there, and what are their relative widths?
-set column_ratios 1,3,4
+set column_ratios 1,1,1,3
 
 # Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
@@ -39,7 +39,7 @@ set show_hidden true
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
 # With "multiple", ranger will ask only if you delete multiple files at once.
-set confirm_on_delete always
+set confirm_on_delete multiple
 
 # Use non-default path for file preview script?
 # ranger ships with scope.sh, a script that calls external programs (see
@@ -124,8 +124,8 @@ set w3m_delay 0.02
 set w3m_offset 0
 
 # Default iTerm2 font size (see: preview_images_method: iterm2)
-set iterm2_font_width 8
-set iterm2_font_height 11
+# set iterm2_font_width 8
+# set iterm2_font_height 11
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis true
