--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -22,7 +22,7 @@ insteadOf = https://github.com/
 defaultBranch = main
 
 [interactive]
-diffFilter = delta --color-only
+diffFilter = delta --color-only --side-by-side
 
 [delta]
 navigate = true
