--- a/dot_config/direnv/direnv.toml
+++ b/dot_config/direnv/direnv.toml
@@ -1,9 +1,5 @@
 [global]
-strict_env=true
+strict_env = true
 
 [whitelist]
-prefix=[
-	"~/Code/axelyung",
-	"~/Code/nominal",
-	"~/Code/sandbox"
-]
+prefix = ["~/Code/axelyung", "~/Code/nominal", "~/Code/sandbox"]
