update success symbol

--- a/dot_config/starship/starship.toml
+++ b/dot_config/starship/starship.toml
@@ -101,7 +101,7 @@ symbol = " "
 symbol = "🅢 "
 
 [character]
-success_symbol = "[~](green)"
+success_symbol = "[󰁔](green)"
 error_symbol = "[✗](red)"
 
 [directory]
